workaround for OSSRH-66257